All fresh and clean, added roles